# Multimodality-App

./: .env.example  .env_example  .gitignore  README.md  api_examples.ipynb  check_performance.py  cpp.html  cpp.html.backup  llama.md  pyproject.toml  start.sh  start_llama.sh  test_ultravox.py
.cursor/rules/: api-compatibility.mdc  project-architecture.mdc  realtime-processing.mdc
docs/: realtime-websocket.md  realtime_api.md
multimodality_app/: __init__.py  config.py  index.html  llm.py  llm_llama.py  logging_config.py  schema.py  server.py  server_llama.py  utils.py  web.py
multimodality_app/media_processing/: __init__.py  audio.py  image.py  utils.py  video.py
multimodality_app/routes/: __init__.py  audio.py  image.py  llm.py  main.py  multimodal.py  processing.py  realtime.py  utils.py  video.py
multimodality_app/static/: index.html
multimodality_app/static/js/: file-processor.js  recording-manager.js  screen-sharing.js  utils.js  websocket-manager.js
test/: run_tests.py  test_llm.py  test_utils.py
