[project]
name = "Multimodality-App"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-openai>=0.3.21",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]

[project.optional-dependencies]
dev = [
    "rich>=14.0.0",
]
